# terminal

./: .curlylint.yaml  .gitattributes  .gitignore  .importlinter  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  basicly.toml  package-lock.json  pyproject.toml  setup-terminal.py  terminal-cheat-sheet.html  terminal-cheat-sheet.md
.basicly/: README.md  generated-manifest.json
.basicly/basicly/: __init__.py  catalog.py  cli.py  config.py  hooks.py  loader.py  planner.py  schema.py  skills.py
.basicly/skills/: README.md
.basicly/state/: install.json
.basicly/targets/: codex.yaml
.basicly/tests/: __init__.py  test_cli.py  test_loader.py  test_planner.py  test_renderers.py  test_skills.py
.beads/: .gitignore  config.yaml  issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  security-auditor.md  test-runner.md
.claude/rules/: python-style.md  test-discipline.md
.claude/skills/: README.md
.github/: copilot-instructions.md
.github/hooks/: basicly-tool-usage-copilot.json
.github/instructions/: python-style.instructions.md  test-discipline.instructions.md
.github/workflows/: basicly-gates.yml  basicly.yml  cheat-sheet.yml  quality-gates.yml  release.yml
.plan/: README.md  source-of-truth-projector-extensions.md  source-of-truth-projector.md  wezterm-setup.md
.plans/: agent-tool-skill-catalog.md
.scripts/: README.md  generate_release_changelog.py  render-cheat-sheet.py  setup-terminal.py  sync-basicly.py  wsl-upgrade-ubuntu-26.04.sh
.scripts/git-hooks/: commit-msg.py  (+2 more)
docs/: cheat-sheet-publishing.md  releases.md
terminal_setup/: cli.py  configs.py  platform.py  prerequisites.py  runner.py
tests/: __init__.py  test_render_cheat_sheet.py  test_sync_basicly.py  test_workspace.py
(+218 files in other folders)
