[project]
name = "terminal"
version = "0.1.0"
description = "Cross-platform terminal setup and automation workspace"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "curlylint>=0.13.1",
  "djlint>=1.40.4",
  "import-linter>=2.13",
  "jinja2>=3.1.6",
  "pip-audit>=2.10.1",
  "pre-commit>=4.6",
  "pyproject-fmt>=2.25.2",
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "ruff>=0.15.21",
  "vulture>=2.16",
]

[tool.uv]
package = false
