[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77" ]

[project]
name = "terminal"
version = "0.2.2"
description = "Cross-platform terminal setup and automation workspace"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "curlylint>=0.13.1",
  "djlint>=1.40.4",
  "import-linter>=2.13",
  "jinja2>=3.1.6",
  "pip-audit>=2.10.1",
  "pre-commit>=4.6",
  "pyproject-fmt>=2.25.2",
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "ruff>=0.15.21",
  "vulture>=2.16",
]

[tool.setuptools]
packages = [ "terminal_setup" ]

[tool.setuptools.package-data]
terminal_setup = [ "templates/*" ]

[tool.pytest.ini_options]
pythonpath = [".basicly", "."]
addopts = ["--import-mode=importlib"]

[tool.pyright]
extraPaths = [".basicly", "."]
typeCheckingMode = "basic"

[project.scripts]
terminal-setup = "terminal_setup.cli:main"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.uv]
package = false
